[package]
name = "array-concat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4.0"
fuel-types = "0.24.0"
rkyv = { version = "0.7", features = ["alloc"] }
uninit = { version = "0.5", features = ["chain"]}

[[bench]]
name = "multikey"
harness = false